# poppler2json

./: .gitignore  Makefile  README.md  meson.build  poppler2json.vala
src/: cli.vala  poppler2json.vala  reader.vala  utils.vala  zip_writer.vala
test-files/: .gitignore
